--- a/index.html
+++ b/index.html
@@ -4,9 +4,18 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/d3plus/1.9.2/d3plus.full.min.js"></
    script>
 </head>
+<br />Nombre: Mario Parrón Verdasco <br />
+Url:
+<a href="https://js-dizo34.stackblitz.io">https://js-dizo34.stackblitz.io </a>
+<br />
+GitHub: 
+<br /><a href="https://github.com/marioopv"> marioopv </a>
+<br /><a href="https://github.com/marioopv/Visualizaci-n-de-Datos-AG3"> stackblitz codigo</a>
+<br /><a href="https://github.com/marioopv/08MBID---Visualizacion-de-Datos"> 08MBID---Visualizacion-de-Datos </a>
 
 <h1>Actividad 3</h1>
-08MBID---Visualizacion-de-Datos
+Collab: 
+<br /><a href="https://colab.research.google.com/drive/1R_3eXYEUtjvApsizV0D5GMwS-pPCKsBc?usp=sharing"> https://colab.research.google.com/drive/1R_3eXYEUtjvApsizV0D5GMwS-pPCKsBc?usp=sharing </a>
 <h2> Gráfico de Columnas con D3Plus</h2>
 <div id="viz1"></div>
 <h2> Reutilizar código. Barras</h2>
